[gd_scene load_steps=24 format=2]

[ext_resource path="res://Levels/Level3.gd" type="Script" id=1]
[ext_resource path="res://Items/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/background.png" type="Texture" id=3]
[ext_resource path="res://Items/Podium/Podium.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/level_0m.png" type="Texture" id=5]
[ext_resource path="res://assets/level_10m.png" type="Texture" id=6]
[ext_resource path="res://assets/level_20m.png" type="Texture" id=7]
[ext_resource path="res://assets/level_30m.png" type="Texture" id=8]
[ext_resource path="res://assets/level_40m.png" type="Texture" id=9]
[ext_resource path="res://assets/level_50m.png" type="Texture" id=10]
[ext_resource path="res://assets/level_60m.png" type="Texture" id=11]
[ext_resource path="res://assets/level_70m.png" type="Texture" id=12]
[ext_resource path="res://assets/level_80m.png" type="Texture" id=13]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/Stage2.ogg" type="AudioStream" id=15]
[ext_resource path="res://assets/sfx/TimeReduce.ogg" type="AudioStream" id=16]
[ext_resource path="res://assets/sfx/GameOver.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/sfx/Clapping.wav" type="AudioStream" id=18]
[ext_resource path="res://assets/sfx/HurtBall.wav" type="AudioStream" id=19]
[ext_resource path="res://Items/CheckPoints.tscn" type="PackedScene" id=20]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1828, 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 70.8109 )

[sub_resource type="RectangleShape2D" id=3]

[node name="Level3" type="Node2D"]
script = ExtResource( 1 )
Ball = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
margin_left = -0.49826
margin_top = 1.993
margin_right = 2116.5
margin_bottom = 225.993
rect_scale = Vector2( 1.95, 2.05 )
texture = ExtResource( 3 )
stretch_mode = 2

[node name="Podium" parent="." instance=ExtResource( 4 )]
position = Vector2( 4033.89, 378.21 )

[node name="LevelContainer" type="Node2D" parent="."]
editor/display_folded = true

[node name="level_0m" type="Sprite" parent="LevelContainer"]
position = Vector2( 4060, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="level_10m" type="Sprite" parent="LevelContainer"]
position = Vector2( 3560, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="level_20m" type="Sprite" parent="LevelContainer"]
position = Vector2( 3060, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="level_30m" type="Sprite" parent="LevelContainer"]
position = Vector2( 2560, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="level_40m" type="Sprite" parent="LevelContainer"]
position = Vector2( 2060, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="level_50m" type="Sprite" parent="LevelContainer"]
position = Vector2( 1560, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )

[node name="level_60m" type="Sprite" parent="LevelContainer"]
position = Vector2( 1060, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 11 )

[node name="level_70m" type="Sprite" parent="LevelContainer"]
position = Vector2( 560, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )

[node name="level_80m" type="Sprite" parent="LevelContainer"]
position = Vector2( 60, 435 )
scale = Vector2( 2, 2 )
texture = ExtResource( 13 )

[node name="Floor" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 1828, 414.907 )
scale = Vector2( 0.998194, 3.92001 )
shape = SubResource( 1 )

[node name="BallContainer" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 14 )]
editor/display_folded = true
position = Vector2( 107, 340 )
scale = Vector2( 0.998518, 0.804541 )
speed = 110
jump_power = 450
gravity = 15
slow_backward = true
process_hurt = true
character_behaviour = "Stage 3:Balls"

[node name="Camera2D" parent="Player" index="2"]
position = Vector2( -140, 0 )
anchor_mode = 0
limit_left = 0
limit_top = 0
limit_right = 4130
limit_bottom = 460
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Sounds" parent="Player" index="3"]
editor/display_folded = true

[node name="Walls" type="Node" parent="."]

[node name="LeftWall" type="StaticBody2D" parent="Walls"]
editor/display_folded = true
position = Vector2( 78.5465, 331.998 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftWall"]
shape = SubResource( 2 )

[node name="Sounds" type="Node" parent="."]
editor/display_folded = true

[node name="LevelSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 15 )
autoplay = true

[node name="ReduceTimeSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 16 )

[node name="GameOverSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 17 )

[node name="WinSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 18 )

[node name="HurtSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 19 )

[node name="GoalSensor" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 3599.08, 296.524 )
scale = Vector2( 1, 2.36 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalSensor"]
scale = Vector2( 0.44, 4.6 )
shape = SubResource( 3 )

[node name="PlayerBall" parent="." instance=ExtResource( 2 )]
position = Vector2( 107, 383 )

[node name="CheckPoints" parent="." instance=ExtResource( 20 )]
editor/display_folded = true

[node name="chkpt_190m" parent="CheckPoints" index="0"]
position = Vector2( -50, 383 )

[node name="chkpt_180m" parent="CheckPoints" index="1"]
position = Vector2( -50, 383 )

[node name="chkpt_170m" parent="CheckPoints" index="2"]
position = Vector2( -50, 383 )

[node name="chkpt_160m" parent="CheckPoints" index="3"]
position = Vector2( -50, 383 )

[node name="chkpt_150m" parent="CheckPoints" index="4"]
position = Vector2( -50, 383 )

[node name="chkpt_140m" parent="CheckPoints" index="5"]
position = Vector2( -50, 383 )

[node name="chkpt_130m" parent="CheckPoints" index="6"]
position = Vector2( -50, 383 )

[node name="chkpt_120m" parent="CheckPoints" index="7"]
position = Vector2( -50, 383 )

[node name="chkpt_110m" parent="CheckPoints" index="8"]
position = Vector2( -50, 383 )

[node name="chkpt_100m" parent="CheckPoints" index="9"]
position = Vector2( -50, 383 )

[node name="chkpt_90m" parent="CheckPoints" index="10"]
position = Vector2( -50, 383 )

[node name="chkpt_80m" parent="CheckPoints" index="11"]
position = Vector2( -50, 383 )

[node name="chkpt_70m" parent="CheckPoints" index="12"]
editor/display_folded = false
position = Vector2( 640, 383 )

[node name="CheckPoint70" parent="CheckPoints/chkpt_70m" index="0"]
position = Vector2( 0, -110 )

[node name="chkpt_60m" parent="CheckPoints" index="13"]
editor/display_folded = false
position = Vector2( 1140, 383 )

[node name="CheckPoint60" parent="CheckPoints/chkpt_60m" index="0"]
position = Vector2( 0, -110 )

[node name="chkpt_50m" parent="CheckPoints" index="14"]
editor/display_folded = false
position = Vector2( 1640, 383 )

[node name="CheckPoint50" parent="CheckPoints/chkpt_50m" index="0"]
position = Vector2( 0, -110 )

[node name="chkpt_40m" parent="CheckPoints" index="15"]
editor/display_folded = false
position = Vector2( 2140, 383 )

[node name="CheckPoint40" parent="CheckPoints/chkpt_40m" index="0"]
position = Vector2( 0, -110 )

[node name="chkpt_30m" parent="CheckPoints" index="16"]
editor/display_folded = false
position = Vector2( 2640, 383 )

[node name="CheckPoint30" parent="CheckPoints/chkpt_30m" index="0"]
position = Vector2( 0, -110 )

[node name="chkpt_20m" parent="CheckPoints" index="17"]
editor/display_folded = false
position = Vector2( 3140, 383 )

[node name="CheckPoint20" parent="CheckPoints/chkpt_20m" index="0"]
position = Vector2( 0, -110 )
[connection signal="body_entered" from="Floor" to="." method="_on_Floor_body_entered"]
[connection signal="jumped" from="Player" to="." method="_on_Player_jumped"]
[connection signal="lose" from="Player" to="." method="_on_Player_lose"]
[connection signal="moved" from="Player" to="." method="_on_Player_moved"]
[connection signal="stopped" from="Player" to="." method="_on_Player_stopped"]
[connection signal="win" from="Player" to="." method="_on_Player_win"]
[connection signal="finished" from="Sounds/GameOverSound" to="." method="_on_GameOverSound_finished"]
[connection signal="finished" from="Sounds/WinSound" to="." method="_on_WinSound_finished"]
[connection signal="body_entered" from="GoalSensor" to="." method="_on_GoalSensor_body_entered"]
[connection signal="area_entered" from="PlayerBall" to="." method="_on_PlayerBall_area_entered"]
[connection signal="player_detected" from="PlayerBall" to="." method="_on_Ball_player_detected"]
[connection signal="screen_exited" from="PlayerBall" to="." method="_on_ball_screen_exited"]

[editable path="Player"]

[editable path="CheckPoints"]
